bk_ida/gccida/c0/find_reloads_subreg_address
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6218:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6224:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v9; // [rsp+24h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6225:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v10; // [rsp+28h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6230:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type typea; // [rsp+84h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6266:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6266:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/reload.c:6274:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( replace_reloads && recog_data_0.operand[opnuma] != xa ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_subreg_address/src/obj/reload.o] Error 1
